# cli

./: Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: ci.yml
src/: commands.rs  json.rs  main.rs  text.rs
src/commands/: create.rs  extract.rs  list.rs  metadata.rs  version.rs
