[package]
name = "acridotheres_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acridotheres = "0.5.0"
byte-unit = { version = "5.1.6", features = ["u128"] }
clap = { version = "4.5.21", features = ["derive"] }
dh = "0.8.0"
